# VoiceAssistant

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/vinhpx/voiceassistant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: PLACE_MODELS_HERE.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  wakeup_detector.cpp  wakeup_detector.h
app/src/main/java/com/vinhpx/voiceassistant/: MainActivity.kt  WakeupDetectorCallback.java  WakeupDetectorJNI.java  WakeupDetectorService.java
app/src/main/java/com/vinhpx/voiceassistant/speech/: AzureSpeechRecognizer.java  SpeechRecognitionListener.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/vinhpx/voiceassistant/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
